<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".login.view.LoginActivity">


    <ImageView
        android:id="@+id/imageView9"
        android:layout_width="@dimen/thumbNail_large"
        android:layout_height="@dimen/thumbNail_large"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        app:srcCompat="@drawable/ic_heal_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/padding_20"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/email_mobile_number" />

        <EditText
            android:id="@+id/medtEmailID"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textEmailAddress" />
        <!--android:text="vaibhav@yopmail.com"/>-->
        <!--devendra3908@gmail.com-->
        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/password" />

        <EditText
            android:id="@+id/medtPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPassword" />
        <!--android:text="asdf123"/>-->

        <TextView
            android:id="@+id/btnLogin"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginTop="@dimen/V50dip"
            android:background="@drawable/border_fill_orange"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/white" />
        <TextView
            android:id="@+id/textViewOTP"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/linearLayout"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:text="@string/otplogin"
            style="@style/TextViewStyleRegularDark14" />
    </LinearLayout>
</LinearLayout>
